--- a/deployment/ai-powered-health-data-masking.template
+++ b/deployment/ai-powered-health-data-masking.template
@@ -12,7 +12,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 
 Description: 
-  "SO0059 - AI Powered Health Data Masking"
+  "(SO0059) - AI Powered Health Data Masking"
 Mappings:
   FunctionMap:
     Configuration:
